# 15721-s24-catalog2

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
crates/examples/: Cargo.toml
crates/haha/: Cargo.toml
crates/rest/: Cargo.toml
crates/test_utils/: Cargo.toml
doc/: README.md  design_doc.md
doc/openapi/: rest-catalog-open-api.yaml
libs/iceberg/: Cargo.toml
libs/iceberg/src/: lib.rs
libs/rest/: Cargo.toml
libs/test_utils/: Cargo.toml
scripts/: bench  benchmark.py  parse_dependencies.py
src/: cli.rs  function.rs  main.rs
src/catalog/: mod.rs  namespace.rs  table.rs
src/common/: error.rs  response.rs  result.rs
src/db/: mod.rs  namespace.rs
src/server/: catches.rs  mod.rs
src/server/routes/: common.rs  config.rs  lib.rs  metric.rs  mod.rs  namespace.rs  request.rs  response.rs  table.rs
src/util/: time.rs
