# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iceberg_catalog_rest"
homepage = "https://rust.iceberg.apache.org/"
repository = "https://github.com/apache/iceberg-rust"
license = "Apache-2.0"
rust-version = "1.75.0"
edition = "2021"
categories = ["database"]
description = "Apache Iceberg Rust REST API"
keywords = ["iceberg", "rest", "catalog"]

[dependencies]
# async-trait = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
iceberg = { path = "../iceberg" }
log = "^0.4"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["rc"] }
serde_derive = "^1.0"
serde_json = "^1.0"
typed-builder = "^0.18"
urlencoding = "2"
uuid = "1.6.1"

[dev-dependencies]
iceberg_test_utils = { path = "../test_utils", features = ["tests"] }
mockito = "^1"
port_scanner = "0.1.5"
tokio = { version = "1", features = ["macros"] }
